src/style.css
/* Variables */
:root {
  --logo-size: 3rem;
  /* --note-color--yellow: rgba(247, 218, 123, 0.726); */
  /* --note-color--blue: rgba(104, 130, 245, 0.76); */
  /* --note-color--green: rgba(104, 245, 111, 0.589); */
  /* --note-color--red: rgba(245, 104, 104, 0.664); */
  /* --note-color--purple: rgba(200, 104, 245, 0.562); */
  /* --note-color--yellow-solid: rgba(247, 218, 123); */
  /* --note-color--blue-solid: rgba(104, 130, 245); */
  /* --note-color--green-solid: rgba(104, 245, 111); */
  /* --note-color--red-solid: rgba(245, 104, 104); */
  /* --note-color--purple-solid: rgba(200, 104, 245); */
  /* --background--color: rgb(255, 251, 190); */
  /* --btn--color: rgb(248, 232, 91); */
  --filter-effect--red: invert(14%) sepia(89%) saturate(5832%)
    hue-rotate(358deg) brightness(111%) contrast(119%);

  --note-color--yellow: #faff5c;
  --note-color--blue: #70d6ff;
  --note-color--green: #82ff9e;
  --note-color--red: #ff5c64;
  --note-color--purple: #aa97c3;
  --btn--color: rgb(250, 255, 127);
  --background--color: #fcff99;
  --navbar-color: rgb(250, 255, 127, 0.8);
  /* https://coolors.co/70d6ff-ff70a6-ff5c64-ff9770-82ff9e-fcff99-faff5c-aa97c3-fcf5c7-ffffc7 */
}

/* General */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Arial, Helvetica, sans-serif;
}

html {
  height: 100%; /* allows background gradient to stretch to full page height*/
}

body {
  height: 100%; /* allows background gradient to stretch to full page height*/
  background: linear-gradient(180deg, var(--background--color) 0%, white 100%);
  background-repeat: no-repeat;
  background-attachment: fixed;
  display: flex;
  flex-wrap: nowrap;
  flex-direction: column;
  align-items: center;
}

.header {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100%;
  z-index: 1;
}

/* Page navbar */
.navbar {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--navbar-color);
  border-radius: 1rem;
  align-self: center;
  width: fit-content;
  /* min-width: 600px; */
  height: fit-content;
  box-shadow: 1px 1px 1px black;
  margin: 0.75rem 0.75rem 0.75rem 0.75rem;
}

.navbar--logo {
  height: var(--logo-size);
  margin: 0 1rem 0 1rem;
}

.navbar--text {
  font-family: "Monoton", cursive;
  font-size: var(--logo-size);
  text-align: center;
  width: fit-content;
}

/* Main Page Buttons */
.btn--main-link {
  position: absolute;
  left: 0%;
  margin: 0.5rem;
  padding: 0.5rem;
  width: fit-content;
  border-radius: 0.5rem;
  box-shadow: black;
  align-self: flex-start;
}

.btn {
  background-color: var(--btn--color);
  box-shadow: 1px 1px 3px black;
}

.btn:hover {
  box-shadow: 3px 3px 7px black;
  cursor: pointer;
}

.btn--new-note {
  border-radius: 50%;
  font: 2.3rem Helvetica, Verdana, Tahoma;
  height: 2.5rem;
  min-width: 2.5rem;
  text-align: center;
  margin: 1rem;
}

/* Displayed Notes */
.container--notes {
  /* z-index: -2; */
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  position: relative;
  /* margin-top: 10vh; */
}

.note {
  position: relative;
  height: 15rem;
  width: 15rem;
  padding: 1rem;
  margin: 0.5rem;
  /* border: 0.2px solid black; */
  /* border-style: outset; */
  border-radius: 1rem;
}

.note:hover {
  border: 1px solid black;
}

.note:hover .btn--delete-note {
  opacity: 100%;
}

.note:hover .note--footer {
  opacity: 100%;
}

.note--content {
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  max-height: 12rem;
}

.note--title {
  font-weight: bold;
  max-height: 2.1rem;
  max-width: 11rem;
  overflow: hidden;
  margin-bottom: 0.2rem;
}

.note--text-body {
  overflow: hidden;
  max-height: 9.7rem;
  line-height: 1.2rem;
}

.note--footer {
  /* z-index: -1; */
  opacity: 0%;
  width: fit-content;
  position: absolute;
  top: 87%;
  left: 16%;
}

.btn--delete-note {
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  background-image: url("img/trash.png");
  background-size: 1.5rem;
  background-position: center;
  opacity: 0%;
  /* border-radius: 50%; */
  padding: 0.2rem;
  top: 2%;
  left: 87%;
}

.btn--delete-note:hover {
  filter: var(--filter-effect--red);
}

.note[data-color="yellow"] {
  background-color: var(--note-color--yellow);
}
.note[data-color="blue"] {
  background-color: var(--note-color--blue);
}
.note[data-color="green"] {
  background-color: var(--note-color--green);
}
.note[data-color="red"] {
  background-color: var(--note-color--red);
}
.note[data-color="purple"] {
  background-color: var(--note-color--purple);
}

/* Modal Window - Note Editing */
.modal--background {
  display: none;
  position: fixed;
  z-index: 2;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  /* background-color: rgb(0, 0, 0); */
  background-color: rgb(0, 0, 0, 0.3);
}

.modal--note {
  display: flex;
  flex-direction: column;
  background-color: white;
  margin: 10% auto; /* 15% from the top and centered */
  padding: 1rem;
  /* max-width: 50%;  */
  /* Could be more or less, depending on screen size */
  width: clamp(300px, 50%, 800px);
  /* height: clamp(300px, 500px, 800px); */
  /* height: min(300px); */

  max-height: 50%;
  border-radius: 10px;
}

.modal--note-title {
  font-weight: bold;
  margin-bottom: 1rem;
  font-size: larger;
  outline: none;
  max-height: 3rem;
  overflow: hidden;
}

.modal--note-title[placeholder]:empty::before {
  content: attr(placeholder);
  color: #555;
}

.modal--note-text {
  margin-bottom: 2rem;
  border: none;
  overflow: auto;
  width: 100%;
  outline: none;
  max-height: 30%;
  /* max-height: calc(100vh - 65vh); */
}

.modal--note-text[placeholder]:empty::before {
  content: attr(placeholder);
  color: #555;
}

.modal--footer {
  height: 3rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-radius: 0.5rem;
}

.btn--modal--close {
  color: black;
  align-self: flex-end;
  font-size: 28px;
  font-weight: bold;
  margin-top: -2%;
}

.btn--modal--close:hover,
.btn--modal--close:focus {
  color: red;
  text-decoration: none;
  cursor: pointer;
}

.btn--modal--delete-note {
  height: 1.75rem;
}

.btn--modal--delete-note:hover {
  /* Red Filter */
  /* https://codepen.io/sosuke/pen/Pjoqqp */
  filter: var(--filter-effect--red);
}

/* Color Picker Module */
.color-picker {
  display: flex;
  flex-direction: row;
  height: inherit;
  align-items: center;
}

.color-picker--dot {
  border-radius: 50%;
  border: 2px white solid;
}

.color-picker--dot--modal {
  width: 2rem;
  height: 2rem;
  margin: 0rem 0.25rem 0rem 0.25rem;
}

.color-picker--dot--note {
  width: 1.5rem;
  height: 1.5rem;
  margin: 0rem 0.25rem 0rem 0.25rem;
}

.color-picker--dot[data-color="yellow"] {
  background-color: var(--note-color--yellow);
}
.color-picker--dot[data-color="blue"] {
  background-color: var(--note-color--blue);
}
.color-picker--dot[data-color="green"] {
  background-color: var(--note-color--green);
}
.color-picker--dot[data-color="red"] {
  background-color: var(--note-color--red);
}
.color-picker--dot[data-color="purple"] {
  background-color: var(--note-color--purple);
}

.color-picker--active[data-color="yellow"] {
  border-color: var(--note-color--yellow);
}
.color-picker--active[data-color="blue"] {
  border-color: var(--note-color--blue);
}
.color-picker--active[data-color="green"] {
  border-color: var(--note-color--green);
}
.color-picker--active[data-color="red"] {
  border-color: var(--note-color--red);
}
.color-picker--active[data-color="purple"] {
  border-color: var(--note-color--purple);
}

